# SoundDecoderLib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
audio/: wave.c
decodervm/: cv.c  engine.c  logger.c  project.c  slot.c  vm.c
esp32/: partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3  upload_firmware.sh  upload_project.sh
esp32/components/decodervm/: CMakeLists.txt  decodervm.c
esp32/components/engine/: CMakeLists.txt  engine.c
esp32/components/player/: CMakeLists.txt  Kconfig.projbuild  i2s_pins.h  player.c
esp32/components/storage/: CMakeLists.txt  Kconfig.projbuild  cv.c  littlefs.c  sd.c  storage.h
esp32/components/web/: CMakeLists.txt  Kconfig.projbuild  web.c
esp32/components/web/assets/: index.html
esp32/components/wifi/: CMakeLists.txt  wifi.c
esp32/include/: pins.h
esp32/log/: idf_py_stderr_output_2111152  idf_py_stderr_output_2111539  idf_py_stdout_output_2111152  idf_py_stdout_output_2111539
esp32/main/: CMakeLists.txt  main.c
hardware/sounddecoder-esp32-s3-wroom-1/: sounddecoder-esp32-s3-wroom-1.kicad_pcb  sounddecoder-esp32-s3-wroom-1.kicad_prl  sounddecoder-esp32-s3-wroom-1.kicad_pro  sounddecoder-esp32-s3-wroom-1.kicad_sch
hardware/sounddecoder-esp32-s3-wroom-1/gerber/: sounddecoder-esp32-s3-wroom-1-B_Cu.gbr  sounddecoder-esp32-s3-wroom-1-B_Mask.gbr  sounddecoder-esp32-s3-wroom-1-B_Paste.gbr  sounddecoder-esp32-s3-wroom-1-B_Silkscreen.gbr  sounddecoder-esp32-s3-wroom-1-Edge_Cuts.gbr  sounddecoder-esp32-s3-wroom-1-F_Cu.gbr  sounddecoder-esp32-s3-wroom-1-F_Mask.gbr  sounddecoder-esp32-s3-wroom-1-F_Paste.gbr  sounddecoder-esp32-s3-wroom-1-F_Silkscreen.gbr  sounddecoder-esp32-s3-wroom-1-In1_Cu.gbr  sounddecoder-esp32-s3-wroom-1-In2_Cu.gbr  sounddecoder-esp32-s3-wroom-1-NPTH.drl  sounddecoder-esp32-s3-wroom-1-PTH.drl  sounddecoder-esp32-s3-wroom-1-job.gbrjob
hardware/sounddecoder-esp32-s3-wroom-2/: sounddecoder-esp32-s3-wroom-2.kicad_pcb  sounddecoder-esp32-s3-wroom-2.kicad_prl  sounddecoder-esp32-s3-wroom-2.kicad_pro  sounddecoder-esp32-s3-wroom-2.kicad_sch
hardware/sounddecoder-esp32-s3-wroom-2/gerber/: sounddecoder-esp32-s3-wroom-2-B_Cu.gbr  sounddecoder-esp32-s3-wroom-2-B_Mask.gbr  sounddecoder-esp32-s3-wroom-2-B_Paste.gbr  sounddecoder-esp32-s3-wroom-2-B_Silkscreen.gbr  sounddecoder-esp32-s3-wroom-2-Edge_Cuts.gbr  sounddecoder-esp32-s3-wroom-2-F_Cu.gbr  sounddecoder-esp32-s3-wroom-2-F_Mask.gbr  sounddecoder-esp32-s3-wroom-2-F_Paste.gbr  sounddecoder-esp32-s3-wroom-2-F_Silkscreen.gbr  sounddecoder-esp32-s3-wroom-2-In1_Cu.gbr  sounddecoder-esp32-s3-wroom-2-In2_Cu.gbr  sounddecoder-esp32-s3-wroom-2-NPTH.drl  sounddecoder-esp32-s3-wroom-2-PTH.drl  sounddecoder-esp32-s3-wroom-2-job.gbrjob
hardware/sounddecoder-esp32-wroom-32d/: sounddecoder-esp32-wroom-32d.kicad_prl  sounddecoder-esp32-wroom-32d.kicad_pro  sounddecoder-esp32-wroom-32d.kicad_sch
include/: audio.h  bytecode.h  cv.h  engine.h  logger.h  player.h  project.h  schedule.h  slot.h  sound.h  variables.h  vm.h
libvm/: CMakeLists.txt  slot.c  vm.c
sample/: .gitignore  CMakeLists.txt  player.c  sample.c
